update float none

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -284,4 +284,9 @@ th {
     .kolomKanan img {
         display: none;
     }
+    
+    .kolomKiriContent>img {
+        float: none;
+        
+    }
 }
